cmake_minimum_required(VERSION 3.3)
project(RIPIehl)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -lGL -lGLU -std=c++11 -I/Math")

set(SOURCE_FILES main.cpp Math/Mat4.h Math/Vec2.h Math/Vec3.h Math/Vec4.h 3D_utils/Scene.h.h)
add_executable(RIPIehl ${SOURCE_FILES})


INCLUDE(FindPkgConfig)

PKG_SEARCH_MODULE(SDL2 REQUIRED sdl2)
INCLUDE_DIRECTORIES(${SDL2_INCLUDE_DIRS})
TARGET_LINK_LIBRARIES(RIPIehl ${SDL2_LIBRARIES})

find_package(OpenGL REQUIRED)
INCLUDE_DIRECTORIES(${OPENGL_INCLUDE_DIRS})
TARGET_LINK_LIBRARIES(RIPIehl ${OPENGL_LIBRARIES})

find_package(GLUT REQUIRED)
INCLUDE_DIRECTORIES(${GLUT_INCLUDE_DIRS})
TARGET_LINK_LIBRARIES(RIPIehl ${GLUT_LIBRARIES})

find_package(GLEW REQUIRED)
INCLUDE_DIRECTORIES(${GLEW_INCLUDE_DIRS})
TARGET_LINK_LIBRARIES(RIPIehl ${GLEW_LIBRARIES})